@@ -1,0 +1,18 @@
+/************************
+Update from v 0.4 to 0.5 
+************************/
+
+
+# Dump of table requests
+# ------------------------------------------------------------
+DROP TABLE IF EXISTS `switches`;
+
+CREATE TABLE `switches` (
+  `id` int(11) unsigned NOT NULL AUTO_INCREMENT,
+  `hostname` varchar(32) DEFAULT NULL,
+  `ip_addr` varchar(100) DEFAULT NULL,
+  `description` varchar(256) DEFAULT NULL,
+  `notes` varchar(1024) DEFAULT NULL,
+  PRIMARY KEY (`id`),
+  KEY `hostname` (`hostname`)
+) ENGINE=MyISAM DEFAULT CHARSET=utf8;
