@@ -8,7 +8,9 @@ features for next releases
 	SF requests
 		- sorting				https://sourceforge.net/tracker/?func=detail&aid=3435991&group_id=555701&atid=2254863
 		- MAC address	 		https://sourceforge.net/tracker/?func=detail&aid=3435687&group_id=555701&atid=2254863
+		
 		- Set up switches 		https://sourceforge.net/tracker/?func=detail&aid=3434299&group_id=555701&atid=2254863
+				+ script to import existing ones on upgrade!!!!
 
 	
 	Optional
