@@ -6,12 +6,17 @@
 
 	Bugfixes / enhancements:
 	------------------------
-	+ Fixed dashboard errors if no IPv4/IPv6 subnets configured;
-	+ Fixed errors with viewing / modifying IP addresses for Operator users;
 	+ Added DNS resolving when editing/addin IP address;
 	+ Search returns also subnets;
 	+ jQuery update from 1.6.2 to 1.7;	
 	+ Highcharts update from 2.1.2 to 2.1.8;
+	
+	+ Fixed dashboard errors if no IPv4/IPv6 subnets configured; 
+		(https://sourceforge.net/tracker/?func=detail&aid=3401510&group_id=555701&atid=2254860)
+	+ Fixed errors with viewing / modifying IP addresses for Operator users 
+		(https://sourceforge.net/tracker/?func=detail&aid=3421129&group_id=555701&atid=2254860);
+	+ Fixed session cookie error on hosts 
+		(http://sourceforge.net/tracker/?func=detail&atid=2254860&aid=3407962&group_id=555701)
 		
 
 == 0.4
